@@ -1,3 +1,5 @@
+Development
+	Workaround file rename in xulrunner sdk
 0.9.3
 	Make http://everadio.gamingradio.net work
 	Fix compilation dependancy
